Prevent floating bar margin top flickering with white

--- a/src/targets/meandall/styles/views/floating-bar.less
+++ b/src/targets/meandall/styles/views/floating-bar.less
@@ -111,6 +111,9 @@ floating-bar {
         }
       }
       &.floating-bar--tab-advanced-booking {
+        &.is-active {
+          padding-bottom: 2px;
+        }
         .viewport-mobile & {
           background: @c-booking-widget;
         }
